--- a/style.css
+++ b/style.css
@@ -4,10 +4,26 @@ h1 {
 
 body {
 	max-width: 960px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .featured {
 	color: grey;
 	font-family: 'Amatic SC', cursive;
 	font-size: 30px;
+	margin-top: 5px;
+	padding-left: 5px;
+}
+
+.item {
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+.item-text {
+	text-align: center;
+	font-family: 'Amatic SC', bold;
+	font-size: 25px;
+
 }
