Deployed style with Bootstrap framework

--- a/style.css
+++ b/style.css
@@ -1,47 +1,12 @@
-h1 {
+body {
 	font-family: 'Architects Daughter', cursive;
 }
 
-body {
-	max-width: 960px;
-	margin-left: auto;
-	margin-right: auto;
+.logo {
+	padding-bottom: 25px;
+	padding-top: 25px;
 }
 
-.featured {
-	color: grey;
-	font-family: 'Amatic SC', cursive;
-	font-size: 30px;
-	margin-top: 5px;
-	padding-left: 5px;
-}
-
-.item {
-	padding-left: 5px;
-	padding-right: 5px;
-}
-
-.item-text {
-	text-align: center;
-	font-family: 'Amatic SC', bold;
-	font-size: 25px;
-
-}
-
-.icons {
-	margin-top: auto;
-	margin-bottom: 10px;	
-	padding-left: 15%;
-}
-
-.icons img {
-	width: 30px;
-	margin-left: 15%;
-}
-
-.item-desc {
-	font-family: 'Amatic SC', cursive;
-	font-size: 20px;
-	color: grey;
-	text-align: center;
+.name {
+	padding-top: 25px;
 }
