--- a/style.css
+++ b/style.css
@@ -32,3 +32,8 @@ body {
 	color: grey;
 	font-size: 20px;
 }
+
+.featured-title .featured-text a:link, a:visited, a:hover {
+	font-style: none;
+	color: black;
+}
